<resources>
    <string name="app_name">Muistilista</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="kategoriaString">Kategoria</string>
    <string name="lisatiedotString">Lisätiedot</string>
    <string name="paivamaaraString">Päivämäärä</string>
    <string name="kellonaikaString">Kellonaika</string>
    <string name="otsikkoString">Otsikko</string>

    <string name="lisaatehtavaString">Lisää Tehtävä</string>
    <string name="peruutaString">Peruuta</string>
    <string name="lisaaString">Lisää</string>
    <string name="poistaString">Poista</string>
    <string name="paivitaString">Päivitä</string>
    <string name="valitse_kategoriaString">Valitse Kategoria</string>
    <string name="muistutaString">Muistuta</string>
    <string name="tärkeysString">Tärkeys</string>
    <string name="minutesbeforeString">15min ennen</string>
    <string name="hourbeforeString">Tuntia ennen</string>
    <string name="daybeforeString">Edellisenä päivänä</string>

    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="poista_valmiit_tehtavatString">Poista Valmiit Tehtävät</string>

    <!-- Jos vaihdat kategorioiden nimiä, vaihda myös tähän -->
    <string name="category1">1</string>
    <string name="category2">2</string>
    <string name="category3">3</string>
    <string name="category4">4</string>
    <string name="category5">5</string>
    <string name="category6">6</string>
    <string name="category7">7</string>
    <string name="category8">8</string>
    <string name="category9">9</string>
    <string name="category10">10</string>
    <string name="allCategories">Show All Categories</string>

    <string-array name="categories">
        <!-- Muista myös vaihtaa ListAdapter koodiin kategorioiden nimet jos muutat niitä! -->
        <item>Liikunta</item>
        <item>Terveys</item>
        <item>Koulu</item>
        <item>Työ</item>
        <item>Tärkeä</item>
        <item>Talous</item>
        <item>Askare</item>
        <item>Tapaaminen</item>
        <item>Pelit</item>
        <item>Jääkiekko</item>
        <item>Formula 1</item>
        <item>eSports</item>
        <item>Matkailu</item>
        <item>Muu</item>
    </string-array>

    <string-array name="categories2">
        <!-- Muista myös vaihtaa ListAdapter koodiin kategorioiden nimet jos muutat niitä! -->
        <item>Näytä kaikki</item>
        <item>Liikunta</item>
        <item>Terveys</item>
        <item>Koulu</item>
        <item>Työ</item>
        <item>Tärkeä</item>
        <item>Talous</item>
        <item>Askare</item>
        <item>Tapaaminen</item>
        <item>Pelit</item>
        <item>Jääkiekko</item>
        <item>Formula 1</item>
        <item>eSports</item>
        <item>Matkailu</item>
        <item>Muu</item>
    </string-array>
</resources>