<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diet_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/diet_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/diet_window_background_container"
            android:layout_width="match_parent"
            android:layout_height="427dp"
            android:layout_centerInParent="true"
            android:minHeight="230dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categoryFilterHeader"
                android:layout_width="306dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Filter By:"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="25dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buCategory1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryFilterHeader"
                app:layout_constraintEnd_toStartOf="@id/buCategory2"/>

            <Button
                android:id="@+id/buCategory2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buCategory1"
                app:layout_constraintTop_toBottomOf="@+id/categoryFilterHeader" />

            <Button
                android:id="@+id/buCategory3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buCategory1"
                app:layout_constraintEnd_toStartOf="@id/buCategory4"/>

            <Button
                android:id="@+id/buCategory4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buCategory3"
                app:layout_constraintTop_toBottomOf="@+id/buCategory2" />

            <Button
                android:id="@+id/buCategory5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buCategory3"
                app:layout_constraintEnd_toStartOf="@id/buCategory6"/>

            <Button
                android:id="@+id/buCategory6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buCategory5"
                app:layout_constraintTop_toBottomOf="@+id/buCategory4" />

            <Button
                android:id="@+id/buCategory7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buCategory5"
                app:layout_constraintEnd_toStartOf="@id/buCategory8"/>

            <Button
                android:id="@+id/buCategory8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buCategory7"
                app:layout_constraintTop_toBottomOf="@+id/buCategory6" />

            <Button
                android:id="@+id/buCategory9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buCategory7"
                app:layout_constraintEnd_toStartOf="@id/buCategory10"/>

            <Button
                android:id="@+id/buCategory10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buCategory9"
                app:layout_constraintTop_toBottomOf="@+id/buCategory8" />

            <Button
                android:id="@+id/button15"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/allCategories"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buCategory9" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>