<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5b5b5b">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="200sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="200sp"
        android:background="#85BDDE"
        android:columnCount="2"
        android:rowCount="6"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="200dp">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/otsikkoString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/kellonaikaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/paivamaaraString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/lisatiedotString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/kategoriaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/dropDownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:text="Valitse Kategoria" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/peruutaString"
            android:backgroundTint="#FF200B"/>

        <Button
            android:id="@+id/buAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="#49AB81"
            android:text="@string/lisaaString" />

    </GridLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:textAlignment="center"

        android:text="@string/lisaatehtavaString"
        android:background="#85BDDE"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>