<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/editScreenGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="200sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="200sp"
        android:background="#5b5b5b"
        android:columnCount="2"
        android:rowCount="6"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEditScreenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/otsikkoString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etEditScreenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEditScreenTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/kellonaikaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etEditScreenTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/tvEditScreenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/paivamaaraString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etEditScreenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvEditScreenDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/lisatiedotString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etEditScreenDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEditScreenCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/kategoriaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="19dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/editScreenDropDownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:text="Valitse Kategoria" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buEditScreenCancel"
            android:layout_width="120sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:text="@string/peruutaString"
            android:backgroundTint="#FF200B"/>

        <Button
            android:id="@+id/buEditScreenSave"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="10sp"
            android:gravity="center"
            android:backgroundTint="#13e7ff"
            android:text="@string/paivitaString" />

    </GridLayout>

    <TextView
        android:id="@+id/tvEditScreenHeader2"
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:layout_marginTop="150sp"

        android:background="#5b5b5b"
        android:text="@string/lisaatehtavaString"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editScreenGridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>