<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <GridLayout
        android:id="@+id/addScreenGridLayout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20sp"
        android:layout_marginTop="200sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="200sp"
        android:padding="10dp"

        android:background="@color/purple_500"

        android:columnCount="2"
        android:rowCount="6"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAddScreenHeader"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"

            android:layout_margin="10sp"

            android:text="@string/otsikkoString"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"

            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etAddScreenHeader"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"

            android:backgroundTint="#000000"
            android:ems="10"

            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/tvAddScreenTime"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"

            android:text="@string/kellonaikaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"

            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etAddScreenTime"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"

            android:backgroundTint="#000000"
            android:ems="10"

            android:inputType="time"
            android:text="" />

        <TextView
            android:id="@+id/tvAddScreenDate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"

            android:text="@string/paivamaaraString"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"

            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etAddScreenDate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"

            android:backgroundTint="#000000"
            android:ems="10"

            android:inputType="date"
            android:text="" />

        <TextView
            android:id="@+id/tvAddScreenDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"

            android:text="@string/lisatiedotString"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"

            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/etAddScreenDetails"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"

            android:backgroundTint="#000000"
            android:ems="10"

            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/tvAddScreenCategory"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"

            android:text="@string/kategoriaString"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"

            tools:layout_editor_absoluteY="19dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"

                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"

                android:inputType="none"
                android:text=""
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </GridLayout>

    <Button
        android:id="@+id/buAddScreenCancel"

        android:layout_width="125sp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:backgroundTint="@color/red_delete"
        android:text="@string/peruutaString"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addScreenGridLayout"
        app:layout_constraintEnd_toStartOf="@id/buAddScreenAdd"/>

    <Button
        android:id="@+id/buAddScreenAdd"

        android:layout_width="125sp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"

        android:backgroundTint="@color/green_add"
        android:text="@string/lisaaString"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buAddScreenCancel"
        app:layout_constraintTop_toBottomOf="@+id/addScreenGridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>